get modular armour building